Fix menu on mobile hides header

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -37,4 +37,9 @@ $color-inverted: #eee;
     .small-12:not(:last-child) {
         margin-bottom: 0.3rem;
     }
+
+    .handle {
+        position: relative;
+        top: -2rem;
+    }
 }
